--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,22 +8,143 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Code coverage profiles and other test artifacts
+# Output of the go coverage tool
 *.out
-coverage.*
+coverage.txt
+coverage.html
 *.coverprofile
 profile.cov
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
 
 # Go workspace file
 go.work
 go.work.sum
 
-# env file
-.env
+# Dependency directories
+vendor/
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# Build output
+/HomeGuard
+/homeguard
+/wolctl
+/wol-server
+/wol-cli
+dist/
+build/
+*.bin
+
+# IDE and editor files
+## VSCode
+.vscode/
+.vscode-test/
+*.code-workspace
+
+## JetBrains (GoLand, IntelliJ IDEA)
+.idea/
+*.iml
+*.ipr
+*.iws
+.idea_modules/
+out/
+
+## Vim
+*.swp
+*.swo
+*.swn
+*~
+.*.sw?
+Session.vim
+.netrwhist
+
+## Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+## Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+## Zed
+.zed/
+
+## Cursor
+.cursor/
+
+## Fleet
+.fleet/
+
+## Helix
+.helix/
+
+## macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
+.Trashes
+
+## Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+
+## Linux
+.directory
+.Trash-*
+
+# Log files
+*.log
+logs/
+
+# Configuration files (keep example files)
+config.yaml
+*.local.yaml
+*.local.yml
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.bak
+
+# Debug files
+debug
+__debug_bin
+debug.test
+
+# Air live reload
+tmp/
+.air.toml
+
+# Task runner
+.task/
+
+# OS specific
+Thumbs.db
+Desktop.ini
+
+# Old/backup files
+_/
+*.old
+*.backup
+
+# Generated files
+*.pb.go
+*.mock.go
+
+# Release artifacts
+checksums.txt
