ci: 优化 GitHub Actions 工作流
- 只在推送 tag 时触发构建（而非所有分支推送）
- 移除多版本矩阵，统一使用 Go 1.25
- 保留 PR 的测试功能用于代码审查

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,16 +2,14 @@ name: Go CI
 
 on:
   push:
-    branches: [ main, master, develop ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main, master, develop ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version: ['1.23', '1.24', '1.25']
 
     steps:
     - uses: actions/checkout@v4
@@ -19,7 +17,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: '1.25'
 
     - name: Display Go version
       run: go version
