build: 修复 GoReleaser 配置
- 修正打包文件从 devices.example.yaml 改为 config.example.yaml
- 添加中文文档 README_ZH.md 到发布包

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,8 +46,9 @@ archives:
         format: zip
     files:
       - README.md
+      - README_ZH.md
       - LICENSE
-      - devices.example.yaml
+      - config.example.yaml
 
 checksum:
   name_template: 'checksums.txt'
