fix: 降级 Go 版本到 1.23 以兼容 golangci-lint
- 将 Go 版本从 1.25 降级到 1.23（稳定且广泛支持）
- 修复 golangci-lint 配置中的弃用警告
  - 使用 shadow linter 替代 govet.check-shadowing
  - 使用 output.formats 替代 output.format
- 更新 Dockerfile 和 CI 配置使用 Go 1.23

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,6 @@
 run:
   timeout: 5m
-  go: '1.25'
+  go: '1.23'
 
 linters:
   enable:
@@ -18,6 +18,7 @@ linters:
     - unconvert
     - unparam
     - gosec
+    - shadow
 
 linters-settings:
   gofmt:
@@ -25,7 +26,9 @@ linters-settings:
   goimports:
     local-prefixes: HomeGuard
   govet:
-    check-shadowing: true
+    settings:
+      shadow:
+        strict: true
   errcheck:
     check-type-assertions: true
     check-blank: true
@@ -38,7 +41,8 @@ issues:
         - gosec
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
 
