--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,34 +1,26 @@
+# golangci-lint configuration
+version: '2'
+
 run:
   timeout: 5m
-  go: '1.23'
 
 linters:
+  disable-all: true
   enable:
     - errcheck
-    - gosimple
     - govet
     - ineffassign
     - staticcheck
-    - typecheck
     - unused
-    - gofmt
-    - goimports
-    - misspell
-    - goconst
-    - unconvert
-    - unparam
-    - gosec
-    - shadow
 
 linters-settings:
-  gofmt:
-    simplify: true
-  goimports:
-    local-prefixes: HomeGuard
   govet:
     settings:
-      shadow:
-        strict: true
+      printf:
+        funcs:
+          - Print
+          - Printf
+          - Println
   errcheck:
     check-type-assertions: true
     check-blank: true
@@ -38,11 +30,8 @@ issues:
     - path: _test\.go
       linters:
         - errcheck
-        - gosec
 
 output:
-  formats:
-    - format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
-
+  sort-results: true
