refactor: 简化 changelog 管理
- 移除手动维护的 CHANGELOG.md
- 完全依赖 GoReleaser 自动生成 Release Notes
- 优化 changelog 配置，按类型分组并添加 emoji
- 更清晰的发布说明展示

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -58,14 +58,32 @@ snapshot:
 
 changelog:
   sort: asc
+  use: github
+  groups:
+    - title: '✨ Features'
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: '🐛 Bug Fixes'
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: '🔧 Refactoring'
+      regexp: '^.*?refactor(\([[:word:]]+\))??!?:.+$'
+      order: 2
+    - title: '📝 Documentation'
+      regexp: '^.*?docs(\([[:word:]]+\))??!?:.+$'
+      order: 3
+    - title: '🏗️ Build & CI'
+      regexp: '^.*?(build|ci)(\([[:word:]]+\))??!?:.+$'
+      order: 4
+    - title: 'Other Changes'
+      order: 999
   filters:
     exclude:
-      - '^docs:'
       - '^test:'
       - '^chore:'
       - 'README'
-      - Merge pull request
-      - Merge branch
+      - 'Merge pull request'
+      - 'Merge branch'
 
 release:
   github:
