--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,6 +56,7 @@ jobs:
       uses: golangci/golangci-lint-action@v8
       with:
         version: v2.1
+        verify: false
 
   release:
     name: Release
