--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,37 +1,13 @@
-# golangci-lint configuration
-version: 2
+# golangci-lint v2 configuration
+version: "2"
 
 run:
   timeout: 5m
 
 linters:
-  disable-all: true
   enable:
     - errcheck
     - govet
     - ineffassign
     - staticcheck
     - unused
-
-linters-settings:
-  govet:
-    settings:
-      printf:
-        funcs:
-          - Print
-          - Printf
-          - Println
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
-
-output:
-  print-issued-lines: true
-  print-linter-name: true
-  sort-results: true
